@@ -1,4 +1,13 @@
 ------------------------------------------------------
+Release 2 | Beta 0 | Development 0 | Experimental 2
+
+* Added AndroidInput
+* Added AndroidInputListenerInterface
+* Added InputManagerAndroid
+
+* Fixed bug: Bitmap font rendered in the wrong place
+
+------------------------------------------------------
 Release 2 | Beta 0 | Development 0 | Experimental 1
 
 * Added FontPC
